@@ -31,6 +31,11 @@ namespace MySql.Data.MySqlClient.Tests
 	[TestFixture]
 	public class PoolingTests : BaseTest
 	{
+		public PoolingTests() : base()
+		{
+			csAdditions = ";pooling=true";
+		}
+
 		[TestFixtureSetUp]
 		public void FixtureSetup()
 		{
@@ -170,5 +175,45 @@ namespace MySql.Data.MySqlClient.Tests
 			conn.Close();
 		}
 
+		[Test]
+		public void ExceedMaxAllowedPacket()
+		{
+			MySqlConnection c = null;
+
+			execSQL("set @@global.max_allowed_packet=1000000");		
+			execSQL("DROP TABLE IF EXISTS test");
+			try 
+			{
+				execSQL("CREATE TABLE test (b1 LONGBLOB)");
+
+				string connStr = GetConnectionString(true) + ";max pool size=1";
+				c = new MySqlConnection(connStr);
+				c.Open();
+
+				byte[] b1 = new byte[2500000];
+				MySqlCommand cmd = new MySqlCommand("INSERT INTO test VALUES (?b1)", c);
+				cmd.Parameters.Add("?b1", b1);
+				cmd.ExecuteNonQuery();
+			}
+			catch (Exception ex1)
+			{
+				Assert.IsTrue(c.State == ConnectionState.Closed);
+
+				try 
+				{
+					c.Open();
+					c.ChangeDatabase("mysql");
+				}
+				catch (Exception ex2)
+				{
+					Assert.Fail(ex2.Message);
+				}
+			}
+			finally 
+			{
+				if (c != null)
+					c.Close();
+			}
+		}
 	}
 }
